2002-06-04  George Lebl  <jirka@5z.com>

	* gcalc.c: use _UI_SUBTREE instead of _UI_SUBTREE_STOCK since 
	that makes translations actually work. _UI_SUBTREE_STOCK means
	that the string comes from libgnomeui which in this cases it
	doesn't.

2002-05-31  Ross Burton  <ross@burtonini.com>

	* gcalc.c (about_cb): Set the about dialog as a transient for the
	parent window, so that it appears in the correct place. Fixes #83799.

Fri May 31 13:29:24 2002  George Lebl <jirka@5z.com>

	* gnome-calc.c: fix the 'e' button so that it actually works (use
	  clicked and not the button press event).  Prepare so that we can
	  use the superscripts for the power labels which I didn't change
	  since we're in string freeze.  whack the 'store' global EEEK!
	  Use the fact that memory == 0.0 to see if something is set,
	  that's how most calculators do it.

	* sr.c: random fixage.

2002-05-31  Hidetoshi Tajima <hidetoshi.tajima@sun.com>

	* Makefile.am: Updated fix for #83627.

2002-05-31  Hidetoshi Tajima <hidetoshi.tajima@sun.com>

	* Makefile.am: Fix GNOMELOCALEDIR to point to correct place.
	Fixes #83627.

2002-05-31  Glynn Foster  <glynn.foster@sun.com>

	* gnome-calc.c: Don't have a cursor visible for the storage 
	widget.

2002-05-28  Kevin Vandersloot <kfv101@psu.edu>

	* gnome-calc.c: Convert display to use GtkTextView instead 
	of GtkLabel. Fixes #65807 although might have some resizing 
	issues.

2002-05-25  Glynn Foster  <glynn.foster@sun.com>

	* gnome-calc.c: Add an 'm' button to mark storage. Kinda
	hacked, but kinda works too. Still some size problems
	though. Fixes #70700.

2002-05-25  Glynn Foster  <glynn.foster@sun.com>

	* gcalc.c: (about_cb), (main): Add new calculator image.
	* gnome-calculator.desktop.in: Add .desktop.in love.
	* gnome-calc.c: (negate_val): Don't negate 0's. Fixes #82866.

2002-05-11  Andrew Sobala <andrew@sobala.net>

	* Fix EE calculation. Fixes #81315.

2002-05-10  Sasi Kiran Lanka <sasi.kiran@wipro.com>
