@@ -1,4 +1,4 @@
-<?xml version="1.0" standalone="no"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <omf>
   <resource>
     <creator>
@@ -8,13 +8,13 @@
       gdocteam@sun.com (Sun Microsystems)
     </maintainer>
     <title>
-      GNOME Calculator Manual V2.0
+      GNOME Calculator Manual V2.1
     </title>
     <date>
-      2002-02-27
+      2002-06-19
     </date>
-    <version identifier="2.0" date="2002-02-27" 
-    description="Updated for GNOME 2.0, program version 1.99.2"/>
+    <version identifier="2.1" date="2002-06-19" 
+    description="Updated for GNOME 2.0, program version 1.107.0"/>
     <subject category="GNOME|Applications"/>
     <description>
       User manual for GNOME Calculator. 
