@@ -1,3 +1,13 @@
+2002-07-02 John Fleck <jfleck@inkstain.net>
+
+	* new screenshot (help/C/figures/gcalc_window.png)
+	fixes #85766
+
+2002-06-18  Glynn Foster  <glynn.foster@sun.com>
+
+	* gnome-calc.c: Turn on the use of superscripts for power labels
+	from George's previous patch.
+
 2002-06-04  George Lebl  <jirka@5z.com>
 
 	* gcalc.c: use _UI_SUBTREE instead of _UI_SUBTREE_STOCK since 
